.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Any_3_forms_of_identification__c.field-meta.xml
<CustomField>
    <fullName>Any_3_forms_of_identification__c</fullName>
    <label>Any 3 forms of identification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birth Certificate (inc Marriage Cert OR Change of Name Cert)</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Driver’s License</fullName>
            </value>
            <value>
                <fullName>Medicare Card</fullName>
            </value>
            <value>
                <fullName>WWCC</fullName>
            </value>
            <value>
                <fullName>Bank Card (incl expiry date)</fullName>
            </value>
            <value>
                <fullName>Any Government issued ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>