.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Certificate_Status__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Status__c</fullName>
    <label>Certificate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
            <value>
                <fullName>Final Review</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
                <default>true</default>
                <label>Pending Review</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Lapsed / Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>