.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Certificate_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Type_Name__c</fullName>
    <formula>b3o__Certificate_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Type Name</label>
    <type>Text</type>
</CustomField>