.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Clearance_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Requirement__c</fullName>
    <label>Clearance Requirement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mask Fit Tested</fullName>
            </value>
            <value>
                <fullName>National Police Check</fullName>
            </value>
            <value>
                <fullName>Working with Children Check - WA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>