.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Document_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Document_Assignment__c</fullName>
    <formula>Document_Submission__r.b3o__Document_Assignment__r.Name</formula>
    <label>Document Assignment</label>
    <type>Text</type>
</CustomField>