.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Document_Pack__c.field-meta.xml
<CustomField>
    <fullName>Document_Pack__c</fullName>
    <formula>Document_Submission__r.b3o__Document_Pack__r.Name</formula>
    <label>Document Pack</label>
    <type>Text</type>
</CustomField>