.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Education_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Education_Requirements__c</fullName>
    <label>Education Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Life Support Theory</fullName>
            </value>
            <value>
                <fullName>Manual Handling Theory</fullName>
            </value>
            <value>
                <fullName>Infection Control Theory</fullName>
            </value>
            <value>
                <fullName>Aseptic Technique Theory</fullName>
            </value>
            <value>
                <fullName>Managing Aggression Theory</fullName>
            </value>
            <value>
                <fullName>Mandatory Reporting</fullName>
            </value>
            <value>
                <fullName>Clinical Transfusion Practice</fullName>
            </value>
            <value>
                <fullName>Emergency and Evacuation</fullName>
            </value>
            <value>
                <fullName>Medication Administration and Safety</fullName>
            </value>
            <value>
                <fullName>Aged Care Standards</fullName>
            </value>
            <value>
                <fullName>SIRS</fullName>
            </value>
            <value>
                <fullName>Recognising and Responding to Clinical Deterioration</fullName>
            </value>
            <value>
                <fullName>Falls Risk</fullName>
            </value>
            <value>
                <fullName>Basic Life Support Practical</fullName>
            </value>
            <value>
                <fullName>Manual Handling Practical</fullName>
            </value>
            <value>
                <fullName>Infection Control Practical</fullName>
            </value>
            <value>
                <fullName>Aseptic Technique Practical</fullName>
            </value>
            <value>
                <fullName>Managing Aggression Practical</fullName>
            </value>
            <value>
                <fullName>Emergency and Evacuation Practical</fullName>
            </value>
            <value>
                <fullName>NHHI - Hand Hygiene</fullName>
            </value>
            <value>
                <fullName>Paediatric Life Support</fullName>
            </value>
            <value>
                <fullName>Advanced Life Support</fullName>
            </value>
            <value>
                <fullName>Neonatal Resus Practical</fullName>
            </value>
            <value>
                <fullName>Neonatal Resus Theory</fullName>
            </value>
            <value>
                <fullName>CTG Theory</fullName>
            </value>
            <value>
                <fullName>CTG Practical - Pre Level 1 &lt;55%</fullName>
            </value>
            <value>
                <fullName>CTG Practical - Level 1 55-65%</fullName>
            </value>
            <value>
                <fullName>CTG Practical - Level 2 66-75%</fullName>
            </value>
            <value>
                <fullName>CTG Practical - Level 3 Above 75%</fullName>
            </value>
            <value>
                <fullName>Obstetric Emergencies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>