.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/End_Date_Populated_via_Flow__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Populated_via_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be marked through a flow if candidate says &quot;no&quot; to having valid certificates and we auto populate the &quot;End Date&quot; automatically</description>
    <label>End Date Populated via Flow</label>
    <type>Checkbox</type>
</CustomField>