.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/ID_Collection_List__c.field-meta.xml
<CustomField>
    <fullName>ID_Collection_List__c</fullName>
    <label>ID Collection List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Driver’s License</fullName>
            </value>
            <value>
                <fullName>WWCC</fullName>
            </value>
            <value>
                <fullName>Any Government issued ID with your photo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>