.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/If_Other_please_specify__c.field-meta.xml
<CustomField>
    <fullName>If_Other_please_specify__c</fullName>
    <label>If &apos;Other&apos;, please specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>