.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Main_Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>Main_Certificate_Type__c</fullName>
    <label>Main Certificate Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>