.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Missing_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Missing_Certificate__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This box is checked to indicate the candidate has provided this cert. If the cert is missing, the box is blank</inlineHelpText>
    <label>Certificate Provided</label>
    <type>Checkbox</type>
</CustomField>