.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/National_Police_Check_within_3_years__c.field-meta.xml
<CustomField>
    <fullName>National_Police_Check_within_3_years__c</fullName>
    <label>National Police Check within 3 years?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>