.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Number_of_Files__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Files__c</fullName>
    <label>Number of Files</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>