.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Police_check_provider__c.field-meta.xml
<CustomField>
    <fullName>Police_check_provider__c</fullName>
    <label>Police check provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>