.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AusMed</fullName>
            </value>
            <value>
                <fullName>Other (Please specify the name of provider)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>