.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Provider_Other_Please_specify__c.field-meta.xml
<CustomField>
    <fullName>Provider_Other_Please_specify__c</fullName>
    <label>Provider - Other (Please specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>