.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rejected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Certificates1</relationshipName>
    <type>Lookup</type>
</CustomField>