.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Rejected_date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_date__c</fullName>
    <label>Rejected date</label>
    <type>Date</type>
</CustomField>