.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Comments__c</fullName>
    <label>Rejection Comments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document Expired</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Unacceptable</fullName>
            </value>
            <value>
                <fullName>Document Unclear</fullName>
            </value>
            <value>
                <fullName>Document Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>