.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Type_of_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Qualification__c</fullName>
    <label>Type of Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate 3 - Commercial cookery</fullName>
            </value>
            <value>
                <fullName>Certificate 4 - Commercial cookery, Diploma of hospitality, Diploma of hospitality management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>