.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Vaccination_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Vaccination_Requirements__c</fullName>
    <label>Vaccination Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Influenza</fullName>
            </value>
            <value>
                <fullName>Hepatitis B</fullName>
            </value>
            <value>
                <fullName>Measles, Mumps, Rubella (MMR)</fullName>
            </value>
            <value>
                <fullName>Varicella</fullName>
            </value>
            <value>
                <fullName>MRSA</fullName>
            </value>
            <value>
                <fullName>Hepatitis A</fullName>
            </value>
            <value>
                <fullName>Pertussis</fullName>
            </value>
            <value>
                <fullName>Tuberculosis</fullName>
            </value>
            <value>
                <fullName>Diphtheria/Tetanus/Pertussis (dTpa)</fullName>
            </value>
            <value>
                <fullName>COVID x1</fullName>
            </value>
            <value>
                <fullName>COVID x2</fullName>
            </value>
            <value>
                <fullName>COVID Booster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>