.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Vendor_Module__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Module__c</fullName>
    <label>Vendor Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>