.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Vendor_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Status__c</fullName>
    <label>Vendor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be entered</fullName>
            </value>
            <value>
                <fullName>Send to Vendor</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>