.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>