.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Verified_Date__c</fullName>
    <label>Verified Date</label>
    <type>Date</type>
</CustomField>