.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/fields/WFM_Ticket_Qualification__c.field-meta.xml
<CustomField>
    <fullName>WFM_Ticket_Qualification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WFM Ticket (Qualification)</label>
    <referenceTo>sirenum__Ticket__c</referenceTo>
    <relationshipLabel>Certificates</relationshipLabel>
    <relationshipName>Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>