.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>b3o__Contact__c</columns>
    <columns>b3o__Certificate_Type__c</columns>
    <columns>b3o__Status__c</columns>
    <columns>Certificate_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>b3o__End_Date__c</columns>
    <columns>End_Date_Populated_via_Flow__c</columns>
    <columns>WFM_Ticket_Qualification__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>b3o__Certificate_Type__c</field>
        <operation>contains</operation>
        <value>flu</value>
    </filters>
    <label>All</label>
</ListView>