.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/listViews/Certificates_to_be_checked.listView-meta.xml
<ListView>
    <fullName>Certificates_to_be_checked</fullName>
    <columns>NAME</columns>
    <columns>b3o__Contact__c</columns>
    <columns>b3o__Certificate_Type__c</columns>
    <columns>b3o__Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>b3o__Status__c</field>
        <operation>notEqual</operation>
        <value>valid,rejected</value>
    </filters>
    <label>Certificates to be checked</label>
</ListView>