.vscode/allianceuat_compare/force-app/main/default/objects/b3o__Certificate__c/listViews/Missing_Certificates_All.listView-meta.xml
<ListView>
    <fullName>Missing_Certificates_All</fullName>
    <columns>NAME</columns>
    <columns>b3o__Contact__c</columns>
    <columns>b3o__Type__c</columns>
    <columns>b3o__Status__c</columns>
    <columns>Notes__c</columns>
    <columns>Vendor_Module__c</columns>
    <columns>Vendor_Module_Ref_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Missing_Certificate__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Missing Certificates - All</label>
</ListView>